[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/PlayerStateView.gd" type="Script" id=1]

[node name="PlayerStateView" type="PanelContainer"]
margin_right = 290.0
margin_bottom = 110.0
rect_min_size = Vector2( 290, 0 )
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 283.0
margin_bottom = 103.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_right = 276.0
margin_bottom = 14.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer"]
margin_left = 102.0
margin_right = 153.0
margin_bottom = 14.0
text = "[ Power:"

[node name="Power" type="Label" parent="VBoxContainer2/HBoxContainer"]
margin_left = 157.0
margin_right = 165.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "0"

[node name="Label2" type="Label" parent="VBoxContainer2/HBoxContainer"]
margin_left = 169.0
margin_right = 173.0
margin_bottom = 14.0
text = "]"

[node name="PlayerElements" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 18.0
margin_right = 276.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 20 )
alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 42.0
margin_right = 276.0
margin_bottom = 56.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer4"]
margin_right = 180.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer4/HBoxContainer2"]
margin_right = 89.0
margin_bottom = 14.0
text = "Cards in deck:"

[node name="CardsInDeck" type="Label" parent="VBoxContainer2/HBoxContainer4/HBoxContainer2"]
margin_left = 93.0
margin_right = 101.0
margin_bottom = 14.0
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer4"]
margin_left = 184.0
margin_right = 276.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer4/HBoxContainer3"]
margin_right = 80.0
margin_bottom = 14.0
text = "Discard Pile:"

[node name="DiscardPile" type="Label" parent="VBoxContainer2/HBoxContainer4/HBoxContainer3"]
margin_left = 84.0
margin_right = 92.0
margin_bottom = 14.0
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 60.0
margin_right = 276.0
margin_bottom = 60.0
size_flags_vertical = 0

[node name="CardsInHand" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer"]
margin_right = 276.0
